Bug 1385375 - Fix crash in nsPop3Protocol::InitializeInternal(). r=rkent